@@ -9,6 +9,15 @@ Version 2.31
 
 Major new features:
 
+* A new DSO sorting algorithm has been added in the dynamic linker that uses
+  topological sorting by depth-first search (DFS), solving performance issues
+  of the existing sorting algorithm when encountering particular circular
+  object dependency cases.
+
+* A new tunable, glibc.rtld.dynamic_sort, can be used to select between the two
+  DSO sorting algorithms.  The default setting of '1' uses the current existing
+  algorithm, while a value of '2' selects the new DFS-based algorithm.
+
 * The GNU C Library now supports a feature test macro _ISOC2X_SOURCE to
   enable features from the draft ISO C2X standard.  Only some features from
   this draft standard are supported by the GNU C Library, and as the draft
